--- a/network_drive_connector_config.yml
+++ b/network_drive_connector_config.yml
@@ -15,15 +15,15 @@ network_drive.serve_name: ""
 network_drive.server_ip: ""
 #The name of the machine where the connector will run
 client_machine.name: ""
-# ------------------------------- Workplace Search configuration settings -------------------------------
-#Access token for Workplace search authentication
-workplace_search.access_token: "12345678"                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 
-#Source identifier for the custom source created on the workplace search server
-workplace_search.source_id: "12345678"
-#Workplace search server address Example: http://es-host:3002 
+# ------------------------------- Enterprise Search configuration settings -------------------------------
+#Access token for Enterprise search authentication
+enterprise_search.access_token: "12345678"                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 
+#Source identifier for the custom source created on the Enterprise search server
+enterprise_search.source_id: "12345678"
+#Enterprise search server address Example: http://es-host:3002 
 enterprise_search.host_url: "http://es-host:3002/"
 # ------------------------------- Connector specific configuration settings -------------------------------
-#Specifies the objects to be fetched and indexed in the WorkPlace search along with fields that needs to be included/excluded. The list of the objects with a pattern to be included/excluded is provided. By default all the objects are fetched
+#Specifies the objects to be fetched and indexed in the Enterprise search along with fields that needs to be included/excluded. The list of the objects with a pattern to be included/excluded is provided. By default all the objects are fetched
 include:
 exclude:
 #The timestamp after which all the objects that are modified or created are fetched from the Network Drive. By default, all the objects present in the Netowork Drive till the end_time are fetched
