Somehow missing the github repo

--- a/.ci/jobs/ent-search-connector-network-drives.yml
+++ b/.ci/jobs/ent-search-connector-network-drives.yml
@@ -10,7 +10,7 @@
     prune-dead-branches: true
     scm:
       - github:
-          repo:
+          repo: enterprise-search-network-drives-connector
           repo-owner: elastic
           disable-pr-notifications: true
           branch-discovery: all
