--- a/network_drive_connector.yml
+++ b/network_drive_connector.yml
@@ -1,7 +1,7 @@
 #Configurations for the Network Drive Connector
 
 # ------------------------------- Network Drive configuration settings -------------------------------
-#The domain name of the Network Drive server for NTLM authenticaion
+#The domain name of the Network Drive server for NTLM authentication
 network_drive.domain: ""
 #The username used to login to Network Drive server
 network_drive.username: ""
@@ -32,14 +32,14 @@ exclude:
   path_template:
 #The timestamp after which all the objects that are modified or created are fetched from the Network Drive. By default, all the objects present in the Netowork Drive till the end_time are fetched
 start_time : 
-#The timesstamp before which all the updated objects need to be fetched i.e. the connector won’t fetch any object updated/created after the end_time. By default, all the objects updated/added till the current time are fetched
+#The timestamp before which all the updated objects need to be fetched i.e. the connector won’t fetch any object updated/created after the end_time. By default, all the objects updated/added till the current time are fetched
 end_time : 
 #The level of the logs the user wants to use in the log files. The possible values include: debug, info, warn, error. By default, the level is info
 log_level: INFO
-#The number of retries to perform in case of server error. The connector will use exponential backoff for retry mechanism
+#The number of retries to perform in case of server error. The connector will use exponential back-off for retry mechanism
 retry_count: 3
-#Number of worker processes to be used for the connector. The ideal value should be equal to the number of CPU cores in the machine
-worker_process: 40
+#Maximum number of threads to be used for the connector.
+max_threads: 40
 #Denotes whether document permission will be enabled or not
 enable_document_permission: Yes
 #The path of csv file containing mapping of Network Drive user ID to Workplace user ID
