--- a/network_drive_connector.yml
+++ b/network_drive_connector.yml
@@ -30,7 +30,7 @@ include:
 exclude:
   size:
   path_template:
-#The timestamp after which all the objects that are modified or created are fetched from the Network Drive. By default, all the objects present in the Netowork Drive till the end_time are fetched
+#The timestamp after which all the objects that are modified or created are fetched from the Network Drive. By default, all the objects present in the Network Drive till the end_time are fetched
 start_time : 
 #The timestamp before which all the updated objects need to be fetched i.e. the connector won’t fetch any object updated/created after the end_time. By default, all the objects updated/added till the current time are fetched
 end_time : 
