--- a/network_drive_connector.yml
+++ b/network_drive_connector.yml
@@ -32,13 +32,13 @@ exclude:
   path_template:
 #The timestamp after which all the objects that are modified or created are fetched from the Network Drive. By default, all the objects present in the Network Drive till the end_time are fetched
 start_time : 
-#The timestamp before which all the updated objects need to be fetched i.e. the connector won’t fetch any object updated/created after the end_time. By default, all the objects updated/added till the current time are fetched
+#The timestamp before which all the updated objects need to be fetched i.e. the connector won't fetch any object updated/created after the end_time. By default, all the objects updated/added till the current time are fetched
 end_time : 
-#The level of the logs the user wants to use in the log files. The possible values include: debug, info, warn, error. By default, the level is info
+#The level of the logs the user wants to use in the log files. The possible values include: DEBUG, INFO, WARN, ERROR. By default, the level is INFO
 log_level: INFO
 #The number of retries to perform in case of server error. The connector will use exponential back-off for retry mechanism
 retry_count: 3
-#Number of threads to be used in multithreading for the sharepoint sync.
+#Number of threads to be used in multithreading for the Network Drive sync.
 network_drives_sync_thread_count: 5
 #Number of threads to be used in multithreading for the enterprise search sync.
 enterprise_search_sync_thread_count: 5
